--- a/IntegrationTool.UnitTests.Sources/app.config
+++ b/IntegrationTool.UnitTests.Sources/app.config
@@ -1,14 +1,17 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
             <section name="IntegrationTool.UnitTests.Sources.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
         <IntegrationTool.UnitTests.Sources.Properties.Settings>
             <setting name="CrmConnectionString" serializeAs="String">
-                <value>Url=http://devserv/IT; Domain=DEV; Username=johntest; Password=12ab!12ab;</value>
+                <value>Url=http://devserv/DataProc; Domain=DEV; Username=johntest; Password=12ab!12ab;</value>
+            </setting>
+            <setting name="SharepointUsername" serializeAs="String">
+                <value>mysharepoint@mysptest79.onmicrosoft.com</value>
             </setting>
         </IntegrationTool.UnitTests.Sources.Properties.Settings>
     </userSettings>
@@ -18,6 +21,10 @@
         <assemblyIdentity name="Microsoft.Xrm.Sdk" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.SharePoint.Client.Runtime" publicKeyToken="71e9bce111e9429c" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-15.0.0.0" newVersion="15.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" /></startup></configuration>
