--- a/IntegrationTool.Module.ConnectToSharepoint/packages.config
+++ b/IntegrationTool.Module.ConnectToSharepoint/packages.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.SharePoint.Client" version="14.0.4762.1000" targetFramework="net452" />
-  <package id="Microsoft.SharePoint.Client.Runtime.dll" version="15.0.4859.1000" targetFramework="net452" />
+  <package id="Microsoft.SharePoint2013.CSOM" version="15.0.4711.1000" targetFramework="net452" />
 </packages>
