--- a/IntegrationTool.UnitTests.ApplicationCore/IntegrationTool.UnitTests.ApplicationCore.csproj
+++ b/IntegrationTool.UnitTests.ApplicationCore/IntegrationTool.UnitTests.ApplicationCore.csproj
@@ -141,6 +141,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
