Changed .Net Version to 4.6.2 to prepare it for the latest DynamicsSdk version

--- a/IntegrationTool.Module.ConnectToSQLite/IntegrationTool.Module.ConnectToSQLite.csproj
+++ b/IntegrationTool.Module.ConnectToSQLite/IntegrationTool.Module.ConnectToSQLite.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IntegrationTool.Module.ConnectToSQLite</RootNamespace>
     <AssemblyName>IntegrationTool.Module.ConnectToSQLite</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>77edd279</NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
