--- a/IntegrationTool.Module.LoadFromSQLite/IntegrationTool.Module.LoadFromSQLite.csproj
+++ b/IntegrationTool.Module.LoadFromSQLite/IntegrationTool.Module.LoadFromSQLite.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IntegrationTool.Module.LoadFromSQLite</RootNamespace>
     <AssemblyName>IntegrationTool.Module.LoadFromSQLite</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>7d41b5f4</NuGetPackageImportStamp>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
