--- a/IntegrationTool.Module.ConnectToUrl/IntegrationTool.Module.ConnectToUrl.csproj
+++ b/IntegrationTool.Module.ConnectToUrl/IntegrationTool.Module.ConnectToUrl.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>IntegrationTool.Module.ConnectToUrl</RootNamespace>
     <AssemblyName>IntegrationTool.Module.ConnectToUrl</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
