--- a/IntegrationTool.UnitTests.Sources/packages.config
+++ b/IntegrationTool.UnitTests.Sources/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.0.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.0.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.0.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.0.7" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.5" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.5" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.5" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.5" targetFramework="net462" />
   <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net462" />
   <package id="Microsoft.SharePoint.Client" version="14.0.4762.1000" targetFramework="net461" />
   <package id="Microsoft.SharePoint.Client.Runtime.dll" version="15.0.4859.1000" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net462" />
 </packages>
