--- a/IntegrationTool.UnitTests.Sources/packages.config
+++ b/IntegrationTool.UnitTests.Sources/packages.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.0.2.5" targetFramework="net462" />
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="2.22.302111727" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.CoreAssemblies" version="9.0.2.19" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Deployment" version="9.0.2.19" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.Workflow" version="9.0.2.19" targetFramework="net462" />
+  <package id="Microsoft.CrmSdk.XrmTooling.CoreAssembly" version="9.1.0.17" targetFramework="net462" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.19.8" targetFramework="net462" />
   <package id="Microsoft.SharePoint.Client" version="14.0.4762.1000" targetFramework="net461" />
   <package id="Microsoft.SharePoint.Client.Runtime.dll" version="15.0.4859.1000" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net462" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
 </packages>
